--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <a class="hover-underline-animation nav-link" href="#about-us">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="hover-underline-animation nav-link" href="#credits">Credits</a>
+                  <a class="hover-underline-animation nav-link" href="#credits">Projects</a>
                 </li>
                 <li class="nav-item">
                   <a class="hover-underline-animation nav-link" href="#awards">Awards</a>
@@ -136,7 +136,7 @@
               <div class="row">
                 <!-- <a id="contact" name="contact" class="anchor"></a> -->
                 <div class="col">
-                  <h2 class="mt-3">
+                  <h2>
                     Contact
                   </h2>
                 </div>
