credit tiles test

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Will Cooper - Frontend developer and writer">
     <meta property="og:url" content="https://willcooper.uk/">
     <meta property="og:description" content="WDC">
-    <meta property="og:image" content="https://andreea-vlad.netlify.app/img/av-social.jpg">
+    <meta property="og:image" content="https://willcooper.uk/img/wdc-social.jpg">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="Will Cooper - Frontend developer and writer">
     <meta property="og:image:width" content="1200"/>
@@ -54,7 +54,10 @@
                   <a class="hover-underline-animation nav-link" href="#about-us">About</a>
                 </li>
                 <li class="nav-item text-end">
-                  <a class="hover-underline-animation nav-link" href="#work">Work</a>
+                  <a class="hover-underline-animation nav-link" href="#development">Development</a>
+                </li>
+                <li class="nav-item text-end">
+                  <a class="hover-underline-animation nav-link" href="#writing">Writing</a>
                 </li>
                 <li class="nav-item text-end">
                   <a class="hover-underline-animation nav-link" href="#contact">Contact</a>
@@ -77,7 +80,7 @@
                 <span class="sub-h1">Frontend developer and writer</span>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/wdc.png" class="banner-img mt-2 mt-md-0" alt="WDC" />
+                <img src="img/wdc.png" class="banner-img mt-2 mt-md-0" alt="Will's beautiful face and bald head in a classy black and white photo" />
               </div>
             </div>
           </div>
@@ -97,12 +100,12 @@
       </section>
       <!-- /. -->
 
-      <section id="work" name="work" class="credit-section">
+      <section id="development" name="development" class="credit-section">
         <div class="container mt-3">
           <div class="row">
             <div class="col-12 col-md-9">
-              <h2>Work</h2>
-
+              <h2>Development</h2>
+              <p>TBC</p>
               <!-- <div class="accordion" id="workAaccordion">
                 <div class="accordion-item">
                   <h3 class="accordion-header">
@@ -329,8 +332,77 @@
         </div>
       </section>
 
+      <section id="writing" name="writing" class="credit-section">
+        <div class="container mt-3">
+          <div class="row">
+            <div class="col-12 col-md-9">
+              <h2>Writing</h2>
+              <p>TBC</p>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid mt-3">
+          <div class="row">
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/tv/400px/mock-the-week-400.jpg" alt="Mock the Week - BBC 2" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/tv/400px/breaking-the-news-400.jpg" alt="Breaking the News - BBC Scotland 2" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/tv/400px/diddy-tv-400.jpg" alt="Diddy TV - CBBC" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/tv/400px/dog-ate-homework-400.jpg" alt="The Dog Ate My Homework - CBBC" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/tv/400px/go-8-bit-400.jpg" alt="Go 8 Bit DLC - DAVE" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/tv/400px/hyper-mouse-400.jpg" alt="Hyper Mouse - Made in Leeds" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/pub-olympics-400.jpg" alt="Dave Gorman's Pub Olympics - BBC Radio 4" />
+            </div> 
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/cochrane-fun-house-400.jpg" alt="Alun Cochrane's Fun House - BBC Radio 4" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/comedy-cafe-400.jpg" alt="Comedy Cafe - BBC Radio Scotland" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/guessing-game-400.jpg" alt="The Guessing Game - BBC Radio Scotland" />
+            </div> 
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/breaking-the-news-400.jpg" alt="Breaking the News - BBC Radio Scotland" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/road-trip-400.jpg" alt="Tom Deacon's Road Trip - BBC Radio One" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/jesting-about-400.jpg" alt="Jesting About - BBC Radio Newcastle" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/radio-leeds-400.jpg" alt="Mid Morning - BBC Radio Leeds" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/show-what-you-wrote-400.jpg" alt="The Show What You Wrote - BBC Radio 4" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/newsjack-400.jpg" alt="Newsjack - BBC Radio 4" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles" src="/img/credit-tiles/radio/400px/torpedoes-400.jpg" alt="Damn the Toprpedoes - BFBS Radio" />
+            </div>
+            <div class="col-3 p-0 col-md-2 col-lg-1">
+              <img class="credit-tiles"src="/img/credit-tiles/theatre/400px/twilight-hour.jpg" alt="The Twilight Hour - Etcetera Theatre" />
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Contact form -->  
-      <div class="form-wrapper mt-3 pt-3 pt-md-5 pb-5">
+      <div class="form-wrapper pt-3 pt-md-5 pb-5">
         <section id="contact" name="contact">         
           <div class="container"> 
             <form class="form-style" action="https://formspree.io/f/xaygggky"
@@ -378,7 +450,8 @@
             <h2 class="footer-title">WDC</h2>
             <ul class="list-unstyled mt-4">
               <li class="ftr-nav-link"><a class="ftr-underline-animation ftr-link" href="#about-us">About</a></li>
-              <li class="ftr-nav-link"><a class="ftr-underline-animation ftr-link"  href="#work">Work</a></li>
+              <li class="ftr-nav-link"><a class="ftr-underline-animation ftr-link"  href="#development">Development</a></li>
+              <li class="ftr-nav-link"><a class="ftr-underline-animation ftr-link"  href="#development">Writing</a></li>
               <li class="ftr-nav-link"><a class="ftr-underline-animation ftr-link" href="#contact">Contact</a></li>
             </ul>
           </div>    
