--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             </div>
           </div>
         </div>
-        <div class="container-fluid mt-3">
+        <!-- <div class="container-fluid mt-3">
           <div class="row">
             <div class="col-3 p-0 col-md-2 col-lg-1">
               <img class="credit-tiles" src="/img/credit-tiles/tv/400px/mock-the-week-400.jpg" alt="Mock the Week - BBC 2" />
@@ -398,7 +398,7 @@
               <img class="credit-tiles"src="/img/credit-tiles/theatre/400px/twilight-hour.jpg" alt="The Twilight Hour - Etcetera Theatre" />
             </div>
           </div>
-        </div>
+        </div> -->
       </section>
 
       <!-- Contact form -->  
