--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </section>
 
       <!-- Contact form -->  
-      <div class="form-wrapper pt-3 pt-md-5 pb-5">
+      <div class="form-wrapper mt-3 pt-3 pt-md-5 pb-5">
         <section id="contact" name="contact">         
           <div class="container"> 
             <form class="form-style" action="https://formspree.io/f/xaygggky"
