--- a/index.html
+++ b/index.html
@@ -221,12 +221,13 @@
         slidesToScroll: 1,
         autoplay: true,
         autoplaySpeed: 0,
-        speed: 6000,
+        speed: 3000,
         arrows: false,
         pauseOnHover: false,
         vertical: false,
         cssEase: 'linear',
         ariaHidden: false,
+        accessibility: true,
         responsive: [
           {
             breakpoint: 1210,
