--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-341.js"></script>
    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
     <!-- GSAP -->
@@ -221,33 +220,36 @@
         slidesToScroll: 1,
         autoplay: true,
         autoplaySpeed: 0,
-        speed: 3000,
+        speed: 4000,
         arrows: false,
         pauseOnHover: false,
         vertical: false,
         cssEase: 'linear',
         ariaHidden: false,
-        accessibility: true,
+        draggable: false,
         responsive: [
           {
             breakpoint: 1210,
             settings: {
-              vertical: false,
               slidesToShow: 6
             }
           },
           {
             breakpoint: 992,
             settings: {
-              vertical: false,
               slidesToShow: 4
             }
           },
           {
             breakpoint: 641,
             settings: {
-              vertical: false,
               slidesToShow: 3
+            }
+          },
+          {
+            breakpoint: 401,
+            settings: {
+              slidesToShow: 2
             }
           }
         ]
